examples/datalog/10_edge_cases/47_negative_values.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_negatives
Knowledge graph 'test_negatives' created.
Switched to knowledge graph: test_negatives
> .kg use test_negatives
Switched to knowledge graph: test_negatives
> +nums[(-5,), (-3,), (0,), (3,), (5,)].
Inserted 5 fact(s) into 'nums'.
> +sum_negs(<SUM:X>) :- nums(X), X < 0.
Script error: Parse error: Invalid term: '<SUM:X>'
